--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 </head>
 
 <body>
-  <script src = "/main.js"></script>
-  <script src = "/contract.js"></script>
-  <script src = "/raygame.js"></script>
+  <!-- <script src = "/main.js"></script> -->
+  <!-- <script src = "/contract.js"></script> -->
   <header class="header" id="top">
     <div class="w3-top">
       <div class="w3-bar w3-black w3-card header">
@@ -287,16 +286,6 @@
   </div>
 
   <section>
-    <script>
-      function myFunction() {
-        var x = document.getElementById("navDemo");
-        if (x.className.indexOf("w3-show") == -1) {
-          x.className += " w3-show";
-        } else {
-          x.className = x.className.replace(" w3-show", "");
-        }
-      }
-    </script>
 
     <div class="category" id="minigame">
       <div class="w3-container ">
