--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
-  <script src = "/dist/web3.min.js"></script>
-  <script src = "/dist/pixi.min.js"></script>
+  <!-- <script src = "/dist/web3.min.js"></script> -->
+  <!-- <script src = "/dist/pixi.min.js"></script> -->
   <!-- <script src="/dist/iphone-inline-video.min.js"></script> -->
   <title>Ray's Space</title>
 </head>
