--- a/index.html
+++ b/index.html
@@ -286,6 +286,16 @@
   </div>
 
   <section>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("navDemo");
+        if (x.className.indexOf("w3-show") == -1) {
+          x.className += " w3-show";
+        } else {
+          x.className = x.className.replace(" w3-show", "");
+        }
+      }
+    </script>
 
     <div class="category" id="minigame">
       <div class="w3-container ">
