--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
   <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
-  <!-- <script src = "/dist/web3.min.js"></script> -->
-  <!-- <script src = "/dist/pixi.min.js"></script> -->
+  <script src = "/dist/web3.min.js"></script>
+  <script src = "/dist/pixi.min.js"></script>
   <!-- <script src="/dist/iphone-inline-video.min.js"></script> -->
   <title>Ray's Space</title>
 </head>
 
 <body>
-  <!-- <script src = "/main.js"></script> -->
-  <!-- <script src = "/contract.js"></script> -->
+  <script src = "/main.js"></script>
+  <script src = "/contract.js"></script>
+  <!-- <script src = "/raygame.js"></script> -->
   <header class="header" id="top">
     <div class="w3-top">
       <div class="w3-bar w3-black w3-card header">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right"
           href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="https://rayfang.azurewebsites.net/index.html" class="w3-bar-item w3-button w3-padding-large ">Ray Fang</a>
+        <a href="https://yuhsuanfang.github.io/ray0815.github.io/" class="w3-bar-item w3-button w3-padding-large ">Ray Fang</a>
         <span class="w3-right">
 
 
@@ -301,7 +302,7 @@
       <div class="w3-container ">
         <h2 class="section-text-header">My MiniGame</h2>
       </div>
-      <!-- <script src = "/raygame.js"></script> -->
+      <script src = "/raygame.js"></script>
   </section>
 
 </body>
