--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <div class="hero-section-into-text w3-margin-top">
           <h1 class="w3-text-white">Ray Fang</h1>
           <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
-            "Learn from yesterday, live for today, hope for tomorrow.
+            "Learn from yesterday, live for today, fight for tomorrow.
             The important thing is not to stop questioning." —Albert Einstein
+           =不斷學習, 活在當下, 創造明天=
 
           </p>
           <div class="w3-text-white l " style="margin-top:60px">
