--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
           <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
             "Learn from yesterday, live for today, fight for tomorrow.
             The important thing is not to stop questioning." —Albert Einstein
-           =不斷學習, 活在當下, 創造明天=
-
           </p>
+          <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
+            =不斷學習, 活在當下, 創造明天= —Ray Fang
+          </p>          
           <div class="w3-text-white l " style="margin-top:60px">
             <p>Follow us on Social media</p>
             <div class="w3-margin-top">
