--- a/index.html
+++ b/index.html
@@ -48,21 +48,24 @@
       <a href="#feedback" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Feedback</a>
     </div>
   </header>
+
+  
   <main>
     <div class="hero-section w3-animate-left " id="home">
       <div class="hero-section-main">
-        <div class="hero-section-into-text w3-margin-top">
-          <h1 class="w3-text-white">Ray Fang</h1>
-          <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
-            "Learn from yesterday, live for today, fight for tomorrow.
-            The important thing is not to stop questioning." —Albert Einstein
-          </p>
-          <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
-            =不斷學習, 活在當下, 創造明天= —Ray Fang
-          </p>          
+          <div class="hero-section-into-text w3-margin-top">
+            <h1 class="w3-text-white">Ray Fang</h1>
+            <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
+              "Learn from yesterday, live for today, fight for tomorrow.
+              The important thing is not to stop questioning." —Albert Einstein
+            </p>
+            <p class="w3-right w3-text-white w3-small w3-hide-small hero-qoute ">
+              "不斷學習(謙), 活在當下, 創造未來(瑞)" —Ray Fang
+            </p>
+          </div>
           <div class="w3-text-white l " style="margin-top:60px">
             <p>Follow us on Social media</p>
-            <div class="w3-margin-top">
+              <div class="w3-margin-top">
               <a href="#"><i class="fa fa-facebook-official w3-hover-opacity icons"></i></a>
               <a href="#"><i class="fa fa-instagram w3-hover-opacity icons"></i></a>
               <a href="#"><i class="fa fa-snapchat w3-hover-opacity icons"></i></a>
@@ -70,12 +73,8 @@
               <a href="#"><i class="fa fa-twitter w3-hover-opacity icons"></i></a>
               <a href="https://www.linkedin.com/in/samfang200037655/"><i
                   class="fa fa-linkedin w3-hover-opacity icons"></i></a>
-            </div>
-          </div>
-        </div>
+          </div>  
       </div>
-    </div>
-
     </div>
   </main>
 
